; ModuleID = '/home/carl/AnghaBench/linux/drivers/macintosh/extr_rack-meter.c_rackmeter_stop_cpu_sniffer.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/macintosh/extr_rack-meter.c_rackmeter_stop_cpu_sniffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rackmeter = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rackmeter*)* @rackmeter_stop_cpu_sniffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rackmeter_stop_cpu_sniffer(%struct.rackmeter* %0) #0 {
  %2 = alloca %struct.rackmeter*, align 8
  store %struct.rackmeter* %0, %struct.rackmeter** %2, align 8
  %3 = load %struct.rackmeter*, %struct.rackmeter** %2, align 8
  %4 = getelementptr inbounds %struct.rackmeter, %struct.rackmeter* %3, i32 0, i32 0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i64 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = call i32 @cancel_delayed_work_sync(i32* %7)
  %9 = load %struct.rackmeter*, %struct.rackmeter** %2, align 8
  %10 = getelementptr inbounds %struct.rackmeter, %struct.rackmeter* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i64 1
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = call i32 @cancel_delayed_work_sync(i32* %13)
  ret void
}

declare dso_local i32 @cancel_delayed_work_sync(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
